# curves

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml  doxygen.yaml
cmake/: AddGTest.cmake  Doxygen.cmake  EnableCcache.cmake  Env.cmake  Options.cmake
deploy/ci/: Dockerfile
deploy/doxygen/: Dockerfile
docs/: Doxyfile.in
examples/: CMakeLists.txt  example.cpp
examples/random_generator/: CMakeLists.txt  generator.cpp  generator.h  generator.hpp
examples/summator/: CMakeLists.txt
examples/summator/execution_policy/: execution_policy_summator.cpp  execution_policy_summator.h  execution_policy_summator.hpp
examples/summator/naive/: naive_summator.cpp  naive_summator.h  naive_summator.hpp
examples/summator/openMP/: openMP_summator.cpp  openMP_summator.h  openMP_summator.hpp
examples/summator/tests/: summators.cpp
examples/summator/threads/: theads_summator.h  theads_summator.hpp  threads_summator.cpp  threads_summator.hpp
examples/utils/: CMakeLists.txt  utils.cpp  utils.h  utils.hpp
include/: Point-forward.h  Point.h
include/curves/: Circle.h  Circle.hpp  Ellipse.h  Ellipse.hpp  Helix.h  Helix.hpp  ICurve.h  ICurve.hpp
include/point/: Point-forward.h  Point-forward.hpp  Point.h  Point.hpp
src/curves/: CMakeLists.txt  Circle.cpp  Ellipse.cpp  Helix.cpp
tests/: CMakeLists.txt  point.cpp  utils.h  utils.hpp
tests/circle/: CMakeLists.txt  circle.cpp
tests/ellipse/: CMakeLists.txt  ellipse.cpp
tests/helix/: CMakeLists.txt  helix.cpp
tests/points/: CMakeLists.txt  point.cpp
